--- a/Evaluacion2-ShibuyaStore-002D/Backend/shibuyastorebackend/pom.xml
+++ b/Evaluacion2-ShibuyaStore-002D/Backend/shibuyastorebackend/pom.xml
@@ -60,6 +60,30 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+		<!-- Dependencias Extras -->
+
+
+		<!-- Spring Boot Starter Validation: Para las validaciones en el controlador -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- Spring Boot Starter Security: Para encriptar las contraseñas. -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- DSpringDoc OpenAPI (Swagger): Para la documentación automática de la API. -->
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.5.0</version> 
+		</dependency>
+
 	</dependencies>
 
 	<build>
