Backend de ShibuyaStore Terminado

--- a/Evaluacion2-ShibuyaStore-002D/Backend/shibuyastorebackend/src/main/resources/application.properties
+++ b/Evaluacion2-ShibuyaStore-002D/Backend/shibuyastorebackend/src/main/resources/application.properties
@@ -12,3 +12,23 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Configuración de logs (opcional)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# 1. Configuración de Swagger (Para la documentación de la API)
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# 2. Configuración de subida de archivos (Crea la carpeta 'uploads' en tu proyecto)
+file.upload-dir=./uploads
+
+# 3. Configuración para servir archivos estáticos (Para que se vean las imágenes)
+spring.web.resources.static-locations=classpath:/static/,file:./uploads/
+spring.mvc.static-path-pattern=/uploads/**
+
+# Fuerza la inicialización de la BD después de que JPA cree las tablas
+spring.jpa.defer-datasource-initialization=true
+
+# Forzar la inicialización SIEMPRE (no solo en BD embebidas)
+spring.sql.init.mode=always
+
+# Decirle a Spring que FALLE si el script data.sql tiene un error
+spring.sql.init.continue-on-error=false
